Bug 222387 Release SetIcon stored icons when we are done using them r=ere sr=bz